# CppTemplate

./: CMakeLists.txt  README.md
include/: pch.h
src/: main.cpp
